// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Organisms / CardWithTabs Controlled behaviour 1`] = `
Array [
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

<button
    onClick={[Function]}
    type="button"
  >
    Change state outside
  </button>,
  .c2 {
  padding-left: 12px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
  background-color: transparent;
}

.c4 {
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 20px;
  background-color: transparent;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c8 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c8 > *:not(:first-child) {
  padding-top: 0;
}

.c9 {
  box-sizing: border-box;
}

.c16 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c12 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c12::after {
  content: '';
  background-color: #336BFF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c15 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
}

.c6 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c11 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #212121;
}

.c11,
.c11[type='button'],
.c11[type='reset'],
.c11[type='submit'] {
  -webkit-appearance: button;
}

.c11::-moz-focus-inner,
.c11[type='button']::-moz-focus-inner,
.c11[type='reset']::-moz-focus-inner,
.c11[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c11:-moz-focusring,
.c11[type='button']:-moz-focusring,
.c11[type='reset']:-moz-focusring,
.c11[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c14 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #6E6E6E;
}

.c14,
.c14[type='button'],
.c14[type='reset'],
.c14[type='submit'] {
  -webkit-appearance: button;
}

.c14::-moz-focus-inner,
.c14[type='button']::-moz-focus-inner,
.c14[type='reset']::-moz-focus-inner,
.c14[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c14:-moz-focusring,
.c14[type='button']:-moz-focusring,
.c14[type='reset']:-moz-focusring,
.c14[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7 {
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
  list-style: none;
}

.c17 {
  height: 100%;
}

@media (min-width:760px) {
  .c2 {
    padding-left: 20px;
    padding-top: 16px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c4 {
    padding-left: 20px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c8 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -8px;
    margin-right: -8px;
  }

  .c8 > * {
    padding-left: 8px;
    padding-right: 8px;
  }

  .c8 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c3 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
    className="c0 c1"
  >
    <header
      className="c2"
    >
      <h2
        className="c3"
      >
        Title for the card
      </h2>
    </header>
    <div
      className="c4"
    >
      <div
        className="c5 c6"
        role="tablist"
      >
        <ul
          className="c7 c8"
          direction="row"
        >
          <li
            className="c9"
            role="presentation"
          >
            <span
              className="c10"
            >
              <button
                active={true}
                aria-selected={true}
                className="NormalizedButton__Button-sc-ey7f5x-0 c11"
                id="tabs-tab-0"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="tab"
                tabIndex={0}
                type="button"
              >
                <span
                  className="c12"
                  height={8}
                >
                  Tab title 1
                </span>
              </button>
            </span>
          </li>
          <li
            className="c9"
            role="presentation"
          >
            <span
              className="c13"
            >
              <button
                active={false}
                aria-selected={false}
                className="NormalizedButton__Button-sc-ey7f5x-0 c14"
                id="tabs-tab-1"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="tab"
                tabIndex={-1}
                type="button"
              >
                <span
                  className="c15"
                  height={8}
                >
                  Tab title 2
                </span>
              </button>
            </span>
          </li>
        </ul>
      </div>
      <div
        className="c16"
      />
      <section
        aria-labelledby="tabs-tab-0"
        className="c17"
        hidden={false}
        id="tabs-tabpanel-0"
        role="tabpanel"
      >
        Tab content 1
      </section>
    </div>
  </div>,
]
`;

exports[`Storyshots Organisms / CardWithTabs Integration: with FadedScroll 1`] = `
.c2 {
  padding-left: 12px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
  background-color: transparent;
}

.c4 {
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 20px;
  background-color: transparent;
}

.c22 {
  padding-left: 20px;
  padding-top: 16px;
  padding-right: 20px;
  background-color: transparent;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c18 {
  position: relative;
}

.c20 {
  position: relative;
  overflow-x: hidden;
}

.c23 {
  height: 16px;
  width: 4px;
  position: absolute;
  right: 0;
  pointer-events: none;
  bottom: 0;
}

.c21 {
  height: 16px;
  width: 4px;
  position: absolute;
  right: 0;
  pointer-events: none;
  top: 0;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c8 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c8 > *:not(:first-child) {
  padding-top: 0;
}

.c9 {
  box-sizing: border-box;
}

.c16 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c12 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c12::after {
  content: '';
  background-color: #336BFF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c15 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
}

.c6 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c11 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #212121;
}

.c11,
.c11[type='button'],
.c11[type='reset'],
.c11[type='submit'] {
  -webkit-appearance: button;
}

.c11::-moz-focus-inner,
.c11[type='button']::-moz-focus-inner,
.c11[type='reset']::-moz-focus-inner,
.c11[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c11:-moz-focusring,
.c11[type='button']:-moz-focusring,
.c11[type='reset']:-moz-focusring,
.c11[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c14 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #6E6E6E;
}

.c14,
.c14[type='button'],
.c14[type='reset'],
.c14[type='submit'] {
  -webkit-appearance: button;
}

.c14::-moz-focus-inner,
.c14[type='button']::-moz-focus-inner,
.c14[type='reset']::-moz-focus-inner,
.c14[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c14:-moz-focusring,
.c14[type='button']:-moz-focusring,
.c14[type='reset']:-moz-focusring,
.c14[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7 {
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
  list-style: none;
}

.c17 {
  height: 100%;
}

@media (min-width:760px) {
  .c2 {
    padding-left: 20px;
    padding-top: 16px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c4 {
    padding-left: 20px;
    padding-right: 20px;
  }
}

@media (min-width:976px) {
  .c19 {
    max-height: 80px;
    overflow-y: auto;
    width: 100%;
  }
}

@media (min-width:760px) {
  .c8 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -8px;
    margin-right: -8px;
  }

  .c8 > * {
    padding-left: 8px;
    padding-right: 8px;
  }

  .c8 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c3 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0 c1"
>
  <header
    className="c2"
  >
    <h2
      className="c3"
    >
      Title for the card
    </h2>
  </header>
  <div
    className="c4"
  >
    <div
      className="c5 c6"
      role="tablist"
    >
      <ul
        className="c7 c8"
        direction="row"
      >
        <li
          className="c9"
          role="presentation"
        >
          <span
            className="c10"
          >
            <button
              active={true}
              aria-selected={true}
              className="NormalizedButton__Button-sc-ey7f5x-0 c11"
              id="tabs-tab-0"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="tab"
              tabIndex={0}
              type="button"
            >
              <span
                className="c12"
                height={8}
              >
                Tab title 1
              </span>
            </button>
          </span>
        </li>
        <li
          className="c9"
          role="presentation"
        >
          <span
            className="c13"
          >
            <button
              active={false}
              aria-selected={false}
              className="NormalizedButton__Button-sc-ey7f5x-0 c14"
              id="tabs-tab-1"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="tab"
              tabIndex={-1}
              type="button"
            >
              <span
                className="c15"
                height={8}
              >
                Tab title 2
              </span>
            </button>
          </span>
        </li>
      </ul>
    </div>
    <div
      className="c16"
    />
    <section
      aria-labelledby="tabs-tab-0"
      className="c17"
      hidden={false}
      id="tabs-tabpanel-0"
      role="tabpanel"
    >
      <div
        className="c18"
      >
        <div
          className="c19"
        >
          <div
            className="c20"
          >
            <div
              className="c21"
            />
            <div
              className="c22"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum nulla tincidunt
interdum ornare. Duis blandit nibh nec dui varius lobortis. Sed viverra, metus quis
vulputate accumsan, eros lacus semper nisl, in commodo risus lacus ut libero. Aliquam augue
quam, sollicitudin quis lectus quis, viverra gravida nibh. Quisque vel mi non tortor
sollicitudin sodales id eget odio. Sed mollis eleifend leo, et sagittis mi. Curabitur
cursus, elit ut porta vehicula, elit ipsum sagittis erat, in dapibus sapien ipsum ut purus.
Aliquam sit amet egestas lacus. Aenean leo augue, malesuada id nibh ac, malesuada fermentum
tortor. Vivamus dolor ante, fringilla vel consequat in, hendrerit vel metus. Quisque eget
ornare turpis. Suspendisse a lectus tortor. Sed ultrices lorem nibh, ultrices pulvinar eros
dictum sit amet. Quisque et ipsum in tellus pharetra tempus. Morbi non nunc rhoncus nisi
pellentesque sagittis. Ut eu sem et ante facilisis consequat. Aliquam lorem ligula, laoreet
quis maximus vel, rhoncus ut odio. Mauris interdum aliquet dolor ac efficitur. Maecenas
egestas porttitor tempor. In at dui tellus. Praesent at lorem metus. Quisque ultricies,
nulla sed pulvinar volutpat, libero enim auctor erat, nec consectetur purus lacus sed orci.
In eleifend a risus at pulvinar. Donec ultricies justo et ligula venenatis, sed ultrices
nunc dignissim.
            </div>
            <div
              className="c23"
            />
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Organisms / CardWithTabs Integration: with FadedScroll of content and height being whatever is available left of parents height. 1`] = `
.c3 {
  padding-left: 12px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
  background-color: transparent;
}

.c5 {
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 20px;
  background-color: transparent;
}

.c23 {
  padding-left: 20px;
  padding-top: 16px;
  padding-right: 20px;
  background-color: transparent;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  min-height: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  position: relative;
}

.c20 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  width: 100%;
}

.c21 {
  position: relative;
  overflow-x: hidden;
}

.c24 {
  height: 16px;
  width: 4px;
  position: absolute;
  right: 0;
  pointer-events: none;
  bottom: 0;
}

.c22 {
  height: 16px;
  width: 4px;
  position: absolute;
  right: 0;
  pointer-events: none;
  top: 0;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c9 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c9 > *:not(:first-child) {
  padding-top: 0;
}

.c10 {
  box-sizing: border-box;
}

.c17 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c13 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c13::after {
  content: '';
  background-color: #336BFF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c16 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c14 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
}

.c7 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c12 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #212121;
}

.c12,
.c12[type='button'],
.c12[type='reset'],
.c12[type='submit'] {
  -webkit-appearance: button;
}

.c12::-moz-focus-inner,
.c12[type='button']::-moz-focus-inner,
.c12[type='reset']::-moz-focus-inner,
.c12[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c12:-moz-focusring,
.c12[type='button']:-moz-focusring,
.c12[type='reset']:-moz-focusring,
.c12[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c15 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #6E6E6E;
}

.c15,
.c15[type='button'],
.c15[type='reset'],
.c15[type='submit'] {
  -webkit-appearance: button;
}

.c15::-moz-focus-inner,
.c15[type='button']::-moz-focus-inner,
.c15[type='reset']::-moz-focus-inner,
.c15[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c15:-moz-focusring,
.c15[type='button']:-moz-focusring,
.c15[type='reset']:-moz-focusring,
.c15[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c8 {
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
  list-style: none;
}

.c18 {
  height: 100%;
}

@media (min-width:760px) {
  .c3 {
    padding-left: 20px;
    padding-top: 16px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c5 {
    padding-left: 20px;
    padding-right: 20px;
  }
}

@media (min-width:976px) {
  .c20 {
    min-height: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    -webkit-flex-shrink: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
    -webkit-flex-basis: auto;
    -ms-flex-preferred-size: auto;
    flex-basis: auto;
    overflow-y: auto;
    width: 100%;
  }
}

@media (min-width:760px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -8px;
    margin-right: -8px;
  }

  .c9 > * {
    padding-left: 8px;
    padding-right: 8px;
  }

  .c9 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c4 {
    font-size: 20px;
    line-height: 1.2;
  }
}

@media (min-width:976px) {
  .c2 {
    height: 200px;
  }
}

<div
  className="c0 c1 c2"
>
  <header
    className="c3"
  >
    <h2
      className="c4"
    >
      Title for the card
    </h2>
  </header>
  <div
    className="c5"
  >
    <div
      className="c6 c7"
      role="tablist"
    >
      <ul
        className="c8 c9"
        direction="row"
      >
        <li
          className="c10"
          role="presentation"
        >
          <span
            className="c11"
          >
            <button
              active={true}
              aria-selected={true}
              className="NormalizedButton__Button-sc-ey7f5x-0 c12"
              id="tabs-tab-0"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="tab"
              tabIndex={0}
              type="button"
            >
              <span
                className="c13"
                height={8}
              >
                Tab title 1
              </span>
            </button>
          </span>
        </li>
        <li
          className="c10"
          role="presentation"
        >
          <span
            className="c14"
          >
            <button
              active={false}
              aria-selected={false}
              className="NormalizedButton__Button-sc-ey7f5x-0 c15"
              id="tabs-tab-1"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="tab"
              tabIndex={-1}
              type="button"
            >
              <span
                className="c16"
                height={8}
              >
                Tab title 2
              </span>
            </button>
          </span>
        </li>
      </ul>
    </div>
    <div
      className="c17"
    />
    <section
      aria-labelledby="tabs-tab-0"
      className="c18"
      hidden={false}
      id="tabs-tabpanel-0"
      role="tabpanel"
    >
      <div
        className="c19"
      >
        <div
          className="c20"
        >
          <div
            className="c21"
          >
            <div
              className="c22"
            />
            <div
              className="c23"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum nulla tincidunt
interdum ornare. Duis blandit nibh nec dui varius lobortis. Sed viverra, metus quis
vulputate accumsan, eros lacus semper nisl, in commodo risus lacus ut libero. Aliquam augue
quam, sollicitudin quis lectus quis, viverra gravida nibh. Quisque vel mi non tortor
sollicitudin sodales id eget odio. Sed mollis eleifend leo, et sagittis mi. Curabitur
cursus, elit ut porta vehicula, elit ipsum sagittis erat, in dapibus sapien ipsum ut purus.
Aliquam sit amet egestas lacus. Aenean leo augue, malesuada id nibh ac, malesuada fermentum
tortor. Vivamus dolor ante, fringilla vel consequat in, hendrerit vel metus. Quisque eget
ornare turpis. Suspendisse a lectus tortor. Sed ultrices lorem nibh, ultrices pulvinar eros
dictum sit amet. Quisque et ipsum in tellus pharetra tempus. Morbi non nunc rhoncus nisi
pellentesque sagittis. Ut eu sem et ante facilisis consequat. Aliquam lorem ligula, laoreet
quis maximus vel, rhoncus ut odio. Mauris interdum aliquet dolor ac efficitur. Maecenas
egestas porttitor tempor. In at dui tellus. Praesent at lorem metus. Quisque ultricies,
nulla sed pulvinar volutpat, libero enim auctor erat, nec consectetur purus lacus sed orci.
In eleifend a risus at pulvinar. Donec ultricies justo et ligula venenatis, sed ultrices
nunc dignissim.
            </div>
            <div
              className="c24"
            />
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Organisms / CardWithTabs Integration: with Typography and extra space inside 1`] = `
.c2 {
  padding-left: 12px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
  background-color: transparent;
}

.c4 {
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 20px;
  background-color: transparent;
}

.c18 {
  padding-left: 20px;
  padding-top: 16px;
  padding-right: 20px;
  padding-bottom: 20px;
  background-color: transparent;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c8 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c8 > *:not(:first-child) {
  padding-top: 0;
}

.c9 {
  box-sizing: border-box;
}

.c16 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c12 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c12::after {
  content: '';
  background-color: #336BFF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c15 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
}

.c6 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c11 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #212121;
}

.c11,
.c11[type='button'],
.c11[type='reset'],
.c11[type='submit'] {
  -webkit-appearance: button;
}

.c11::-moz-focus-inner,
.c11[type='button']::-moz-focus-inner,
.c11[type='reset']::-moz-focus-inner,
.c11[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c11:-moz-focusring,
.c11[type='button']:-moz-focusring,
.c11[type='reset']:-moz-focusring,
.c11[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c14 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #6E6E6E;
}

.c14,
.c14[type='button'],
.c14[type='reset'],
.c14[type='submit'] {
  -webkit-appearance: button;
}

.c14::-moz-focus-inner,
.c14[type='button']::-moz-focus-inner,
.c14[type='reset']::-moz-focus-inner,
.c14[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c14:-moz-focusring,
.c14[type='button']:-moz-focusring,
.c14[type='reset']:-moz-focusring,
.c14[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7 {
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
  list-style: none;
}

.c17 {
  height: 100%;
}

@media (min-width:760px) {
  .c2 {
    padding-left: 20px;
    padding-top: 16px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c4 {
    padding-left: 20px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c8 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -8px;
    margin-right: -8px;
  }

  .c8 > * {
    padding-left: 8px;
    padding-right: 8px;
  }

  .c8 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c3 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0 c1"
>
  <header
    className="c2"
  >
    <h2
      className="c3"
    >
      Title for the card
    </h2>
  </header>
  <div
    className="c4"
  >
    <div
      className="c5 c6"
      role="tablist"
    >
      <ul
        className="c7 c8"
        direction="row"
      >
        <li
          className="c9"
          role="presentation"
        >
          <span
            className="c10"
          >
            <button
              active={true}
              aria-selected={true}
              className="NormalizedButton__Button-sc-ey7f5x-0 c11"
              id="tabs-tab-0"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="tab"
              tabIndex={0}
              type="button"
            >
              <span
                className="c12"
                height={8}
              >
                Tab title 1
              </span>
            </button>
          </span>
        </li>
        <li
          className="c9"
          role="presentation"
        >
          <span
            className="c13"
          >
            <button
              active={false}
              aria-selected={false}
              className="NormalizedButton__Button-sc-ey7f5x-0 c14"
              id="tabs-tab-1"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="tab"
              tabIndex={-1}
              type="button"
            >
              <span
                className="c15"
                height={8}
              >
                <span
                  style={
                    Object {
                      "color": "red",
                    }
                  }
                >
                  Custom title component
                </span>
              </span>
            </button>
          </span>
        </li>
      </ul>
    </div>
    <div
      className="c16"
    />
    <section
      aria-labelledby="tabs-tab-0"
      className="c17"
      hidden={false}
      id="tabs-tabpanel-0"
      role="tabpanel"
    >
      <div
        className="c18"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum nulla tincidunt
interdum ornare. Duis blandit nibh nec dui varius lobortis. Sed viverra, metus quis
vulputate accumsan, eros lacus semper nisl, in commodo risus lacus ut libero. Aliquam augue
quam, sollicitudin quis lectus quis, viverra gravida nibh. Quisque vel mi non tortor
sollicitudin sodales id eget odio. Sed mollis eleifend leo, et sagittis mi. Curabitur
cursus, elit ut porta vehicula, elit ipsum sagittis erat, in dapibus sapien ipsum ut purus.
Aliquam sit amet egestas lacus. Aenean leo augue, malesuada id nibh ac, malesuada fermentum
tortor. Vivamus dolor ante, fringilla vel consequat in, hendrerit vel metus. Quisque eget
ornare turpis. Suspendisse a lectus tortor. Sed ultrices lorem nibh, ultrices pulvinar eros
dictum sit amet. Quisque et ipsum in tellus pharetra tempus. Morbi non nunc rhoncus nisi
pellentesque sagittis. Ut eu sem et ante facilisis consequat. Aliquam lorem ligula, laoreet
quis maximus vel, rhoncus ut odio. Mauris interdum aliquet dolor ac efficitur. Maecenas
egestas porttitor tempor. In at dui tellus. Praesent at lorem metus. Quisque ultricies,
nulla sed pulvinar volutpat, libero enim auctor erat, nec consectetur purus lacus sed orci.
In eleifend a risus at pulvinar. Donec ultricies justo et ligula venenatis, sed ultrices
nunc dignissim.
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Organisms / CardWithTabs With variant big 1`] = `
.c2 {
  padding-left: 12px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
  background-color: transparent;
}

.c7 {
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 20px;
  background-color: transparent;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c11 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c11 > *:not(:first-child) {
  padding-top: 0;
}

.c12 {
  box-sizing: border-box;
}

.c19 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c15 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c15::after {
  content: '';
  background-color: #336BFF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c18 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c16 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
}

.c9 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c14 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #212121;
}

.c14,
.c14[type='button'],
.c14[type='reset'],
.c14[type='submit'] {
  -webkit-appearance: button;
}

.c14::-moz-focus-inner,
.c14[type='button']::-moz-focus-inner,
.c14[type='reset']::-moz-focus-inner,
.c14[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c14:-moz-focusring,
.c14[type='button']:-moz-focusring,
.c14[type='reset']:-moz-focusring,
.c14[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c17 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #6E6E6E;
}

.c17,
.c17[type='button'],
.c17[type='reset'],
.c17[type='submit'] {
  -webkit-appearance: button;
}

.c17::-moz-focus-inner,
.c17[type='button']::-moz-focus-inner,
.c17[type='reset']::-moz-focus-inner,
.c17[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c17:-moz-focusring,
.c17[type='button']:-moz-focusring,
.c17[type='reset']:-moz-focusring,
.c17[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c10 {
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
  list-style: none;
}

.c20 {
  height: 100%;
}

@media (min-width:760px) {
  .c2 {
    padding-left: 40px;
    padding-top: 40px;
    padding-right: 40px;
    padding-bottom: 12px;
  }
}

@media (min-width:760px) {
  .c7 {
    padding-left: 40px;
    padding-right: 40px;
    padding-bottom: 40px;
  }
}

@media (min-width:760px) {
  .c11 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -8px;
    margin-right: -8px;
  }

  .c11 > * {
    padding-left: 8px;
    padding-right: 8px;
  }

  .c11 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media not all and (min-width:760px) {
  .c3 {
    display: none !important;
  }
}

@media not all and (max-width:759px) {
  .c5 {
    display: none !important;
  }
}

@media (min-width:760px) {
  .c4 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

@media (min-width:760px) {
  .c6 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0 c1"
>
  <header
    className="c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Title for the card
      </span>
    </div>
    <div
      className="c5"
    >
      <span
        className="c6"
      >
        Title for the card
      </span>
    </div>
  </header>
  <div
    className="c7"
  >
    <div
      className="c8 c9"
      role="tablist"
    >
      <ul
        className="c10 c11"
        direction="row"
      >
        <li
          className="c12"
          role="presentation"
        >
          <span
            className="c13"
          >
            <button
              active={true}
              aria-selected={true}
              className="NormalizedButton__Button-sc-ey7f5x-0 c14"
              id="tabs-tab-0"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="tab"
              tabIndex={0}
              type="button"
            >
              <span
                className="c15"
                height={8}
              >
                Tab title 1
              </span>
            </button>
          </span>
        </li>
        <li
          className="c12"
          role="presentation"
        >
          <span
            className="c16"
          >
            <button
              active={false}
              aria-selected={false}
              className="NormalizedButton__Button-sc-ey7f5x-0 c17"
              id="tabs-tab-1"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="tab"
              tabIndex={-1}
              type="button"
            >
              <span
                className="c18"
                height={8}
              >
                Tab title 2
              </span>
            </button>
          </span>
        </li>
      </ul>
    </div>
    <div
      className="c19"
    />
    <section
      aria-labelledby="tabs-tab-0"
      className="c20"
      hidden={false}
      id="tabs-tabpanel-0"
      role="tabpanel"
    >
      1
    </section>
  </div>
</div>
`;

exports[`Storyshots Organisms / CardWithTabs with initialActiveTabIndex 1`] = `
.c2 {
  padding-left: 12px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
  background-color: transparent;
}

.c4 {
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 20px;
  background-color: transparent;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c8 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c8 > *:not(:first-child) {
  padding-top: 0;
}

.c9 {
  box-sizing: border-box;
}

.c16 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c12 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c15 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
}

.c15::after {
  content: '';
  background-color: #336BFF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
}

.c6 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c11 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #6E6E6E;
}

.c11,
.c11[type='button'],
.c11[type='reset'],
.c11[type='submit'] {
  -webkit-appearance: button;
}

.c11::-moz-focus-inner,
.c11[type='button']::-moz-focus-inner,
.c11[type='reset']::-moz-focus-inner,
.c11[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c11:-moz-focusring,
.c11[type='button']:-moz-focusring,
.c11[type='reset']:-moz-focusring,
.c11[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c14 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
  color: #212121;
}

.c14,
.c14[type='button'],
.c14[type='reset'],
.c14[type='submit'] {
  -webkit-appearance: button;
}

.c14::-moz-focus-inner,
.c14[type='button']::-moz-focus-inner,
.c14[type='reset']::-moz-focus-inner,
.c14[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c14:-moz-focusring,
.c14[type='button']:-moz-focusring,
.c14[type='reset']:-moz-focusring,
.c14[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7 {
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
  list-style: none;
}

.c17 {
  height: 100%;
}

@media (min-width:760px) {
  .c2 {
    padding-left: 20px;
    padding-top: 16px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c4 {
    padding-left: 20px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c8 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-left: -8px;
    margin-right: -8px;
  }

  .c8 > * {
    padding-left: 8px;
    padding-right: 8px;
  }

  .c8 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c3 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0 c1"
>
  <header
    className="c2"
  >
    <h2
      className="c3"
    >
      Title for the card
    </h2>
  </header>
  <div
    className="c4"
  >
    <div
      className="c5 c6"
      role="tablist"
    >
      <ul
        className="c7 c8"
        direction="row"
      >
        <li
          className="c9"
          role="presentation"
        >
          <span
            className="c10"
          >
            <button
              active={false}
              aria-selected={false}
              className="NormalizedButton__Button-sc-ey7f5x-0 c11"
              id="tabs-tab-0"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="tab"
              tabIndex={-1}
              type="button"
            >
              <span
                className="c12"
                height={8}
              >
                Tab title 1
              </span>
            </button>
          </span>
        </li>
        <li
          className="c9"
          role="presentation"
        >
          <span
            className="c13"
          >
            <button
              active={true}
              aria-selected={true}
              className="NormalizedButton__Button-sc-ey7f5x-0 c14"
              id="tabs-tab-1"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="tab"
              tabIndex={0}
              type="button"
            >
              <span
                className="c15"
                height={8}
              >
                Tab title 2
              </span>
            </button>
          </span>
        </li>
      </ul>
    </div>
    <div
      className="c16"
    />
    <section
      aria-labelledby="tabs-tab-1"
      className="c17"
      hidden={false}
      id="tabs-tabpanel-1"
      role="tabpanel"
    >
      2
    </section>
  </div>
</div>
`;
